--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </section>
 
   <footer>
-    <p>Contact: <a href="mailto:yajuvendra@example.com">yajuvendra@example.com</a></p>
+    <p>Contact: <a href="mailto:91.yajuvendra@gmail.com">yajuvendra@example.com</a></p>
   </footer>
 </body>
 </html>
