--- a/index.html
+++ b/index.html
@@ -1,40 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yajuvendrasingh Chauhan | Portfolio</title>
-  <style>
-    body {font-family: Arial, sans-serif; margin:0; padding:0; background:#f8f9fa; color:#333;}
-    header {text-align:center; padding:60px 20px; background:#ffffff;}
-    h1 {margin:0; font-size:2.5em;}
-    h2 {margin:10px 0 20px; color:#555;}
-    .bio {max-width:700px; margin:0 auto; line-height:1.6;}
-    .headshot {width:160px; height:160px; border-radius:50%; object-fit:cover; margin-top:20px;}
-    footer {text-align:center; padding:20px; background:#eee; margin-top:40px;}
-    a {color:#007acc; text-decoration:none;}
-    a:hover {text-decoration:underline;}
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Yajuvendrasingh Chauhan | IMPACT over TENURE</title>
+<style>
+  body {font-family: Arial, sans-serif; margin:0; padding:0; background:#f9f9f9; color:#333;}
+  header {text-align:center; padding:60px 20px; background:#fff;}
+  h1 {margin:0; font-size:2.5em;}
+  h2 {margin:10px 0; color:#555;}
+  .tagline {font-weight:bold; font-size:1.2em; color:#007acc; margin-top:10px;}
+  .headshot {width:180px; height:180px; border-radius:50%; object-fit:cover; margin-top:20px;}
+  .bio, .achievements, .gallery {max-width:900px; margin:40px auto; padding:0 20px; line-height:1.6;}
+  .linkedin-btn {
+      display:inline-block; margin-top:20px; padding:10px 20px;
+      background:#0077b5; color:#fff; border-radius:6px; text-decoration:none;
+      font-weight:bold;
+  }
+  .linkedin-btn:hover {background:#005983;}
+  .achievements h3 {margin-top:0;}
+  .achievements ul {padding-left:20px;}
+  .gallery-images {display:flex; flex-wrap:wrap; gap:15px; margin-top:20px;}
+  .gallery-images img {
+      width:280px; height:180px; object-fit:cover;
+      border-radius:8px; box-shadow:0 2px 5px rgba(0,0,0,0.1);
+  }
+  footer {text-align:center; padding:20px; background:#eee; margin-top:40px;}
+  a {color:#007acc; text-decoration:none;}
+  a:hover {text-decoration:underline;}
+</style>
 </head>
 <body>
-  <header>
-    <img src="headshot.jpg" alt="Yajuvendrasingh Chauhan" class="headshot">
-    <h1>Yajuvendrasingh Chauhan</h1>
-    <h2>Incubation • Startups • Funding • Project &amp; Scheme Management</h2>
-  </header>
 
-  <section class="bio">
-    <p>
-      Yajuvendrasingh Chauhan is a dynamic incubation, program and startup ecosystem enabler,
-      having mobilized over ₹5 crore for incubators and innovation initiatives across premier institutions.
-      With a background in MBA Marketing and B.Sc. Mathematics, he specializes in mentoring startups,
-      securing strategic funding, and executing large-scale innovation programs. He is also recognized for
-      fostering collaborations, advancing CSR fundraising, and elevating institutional innovation rankings.
-    </p>
-  </section>
+<header>
+  <img src="headshot.jpg" alt="Yajuvendrasingh Chauhan" class="headshot">
+  <h1>Yajuvendrasingh Chauhan</h1>
+  <div class="tagline">IMPACT over TENURE</div>
+  <h2>Incubation • Startups • Funding • Project & Scheme Management</h2>
+  <a class="linkedin-btn" href="https://www.linkedin.com/in/your-linkedin-id" target="_blank">
+    Connect on LinkedIn
+  </a>
+</header>
 
-  <footer>
-    <p>Contact: <a href="mailto:91.yajuvendra@gmail.com">91.yajuvendra@gmail.com</a></p>
-  </footer>
+<section class="bio">
+  <p>
+    Yajuvendrasingh Chauhan is a dynamic incubation, program and startup ecosystem enabler,
+    having mobilized over ₹5 crore for incubators and innovation initiatives across premier institutions.
+    With a background in MBA Marketing and B.Sc. Mathematics, he specializes in mentoring startups,
+    securing strategic funding, and executing large-scale innovation programs. Recognized for
+    fostering collaborations, advancing CSR fundraising, and elevating institutional innovation rankings.
+  </p>
+</section>
+
+<section class="achievements">
+  <h3>Key Achievements</h3>
+  <ul>
+    <li>Aggregated ₹5 Cr in funding for startups and incubator operations through multi-stakeholder engagement and institutional development.</li>
+    <li>Mobilized ₹1.08 Cr for IP registration support, student startup prototype development, early-stage grants, and convertible debenture funding mechanisms. Disbursed ₹70 Lakhs under Student Startup and Innovation Policy (SSIP) within 4 months at GTU Ventures, directly supporting first-generation student and alumni innovators.</li>
+    <li>Implemented Startup Gujarat NI-GoG &amp; Startup India Seed Fund Scheme (SISFS) – Facilitated and sanctioned ₹3 Cr in direct funding support to early-stage startups, accelerating innovation and commercialization under SISFS & approved Nodal Institute.</li>
+    <li>Re-designed the SSIP-PoC SOP at institute level to be startup friendly.</li>
+    <li>Designed &amp; Executed the “Young Innovator’s Platform” in collaboration with UNICEF – Led a 6-month statewide initiative to scout, mentor, and support early-stage student innovators. Identified 11 promising projects from ideation to funding-readiness; one secured funding, and 10 are in the pipeline.</li>
+    <li>Spearheaded UNICEF-Sponsored Innovation Program in Gujarat – Successfully implemented a youth-centric innovation platform aimed at nurturing grassroots ideas; supported ideation-stage projects to achieve funding eligibility.</li>
+    <li>Enabled Two Institutes to Achieve 4 out of 5-Star Rankings in IIC MoE Ratings (twice) – Strategically guided Innovation &amp; Incubation Councils (IICs) of two institutes in achieving high rankings through policy alignment, activity planning, and execution support.</li>
+  </ul>
+</section>
+
+<section class="gallery">
+  <h3>Event &amp; Achievement Photos</h3>
+  <div class="gallery-images">
+    <img src="event1.jpg" alt="Event 1">
+    <img src="event2.jpg" alt="Event 2">
+    <img src="event3.jpg" alt="Event 3">
+    <!-- Add more <img> tags as you upload more photos -->
+  </div>
+</section>
+
+<footer>
+  <p>Contact: <a href="mailto:yajuvendra@example.com">yajuvendra@example.com</a></p>
+</footer>
+
 </body>
 </html>
