--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <h1>Yajuvendrasingh Chauhan</h1>
   <div class="tagline">IMPACT over TENURE</div>
   <h2>Incubation • Startups • Funding • Project & Scheme Management</h2>
-  <a class="linkedin-btn" href="https://www.linkedin.com/in/your-linkedin-id" target="_blank">
+  <a class="linkedin-btn" href="https://www.linkedin.com/in/yajuvendrachauhan" target="_blank">
     Connect on LinkedIn
   </a>
 </header>
@@ -76,7 +76,7 @@
 </section>
 
 <footer>
-  <p>Contact: <a href="mailto:yajuvendra@example.com">yajuvendra@example.com</a></p>
+  <p>Contact: <a href="mailto:91.yajuvendra@gmail.com">91.yajuvendra@gmail.com</a></p>
 </footer>
 
 </body>
