--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 
 <section class="bio">
   <p>
-    Yajuvendrasingh Chauhan is a dynamic incubation, program and startup ecosystem enabler,
-    having mobilized over ₹5 crore for incubators and innovation initiatives across premier institutions.
+    Yajuvendrasingh Chauhan is a dynamic incubation, program and startup ecosystem enabler.
     With a background in MBA Marketing and B.Sc. Mathematics, he specializes in mentoring startups,
     securing strategic funding, and executing large-scale innovation programs. Recognized for
     fostering collaborations, advancing CSR fundraising, and elevating institutional innovation rankings.
