--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
 
 <header>
-  <img src="images/headshot.jpg" alt="Yajuvendrasingh Chauhan" class="headshot">
+  <img src="headshot.jpg" alt="Yajuvendrasingh Chauhan" class="headshot">
   <h1>Yajuvendrasingh Chauhan</h1>
   <div class="tagline">IMPACT over TENURE</div>
   <h2>Incubation • Startups • Funding • Project & Scheme Management</h2>
@@ -123,8 +123,8 @@
   <h3>Archives</h3>
   <div class="gallery-images">
 <img src="event1.jpg" alt="Archive 1">
-<img src="event2.jpg" alt="Archive 2">
-<img src="event3.jpg" alt="Archive 3">
+<img src="event2.JPG" alt="Archive 2">
+<img src="event3.JPG" alt="Archive 3">
     <!-- Add more <img> tags as you upload more photos -->
   </div>
 </section>
