--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
   <h3>Archives</h3>
   <div class="gallery-images">
     <a href="images/event1.jpg" data-lightbox="archives" data-title="Archive 1"><img src="images/event1.jpg" alt="Archive 1"></a>
-    <a href="images/event2.jpg" data-lightbox="archives" data-title="Archive 2"><img src="images/event2.jpg" alt="Archive 2"></a>
-    <a href="images/event3.jpg" data-lightbox="archives" data-title="Archive 3"><img src="images/event3.jpg" alt="Archive 3"></a>
+    <a href="images/event2.JPG" data-lightbox="archives" data-title="Archive 2"><img src="images/event2.JPG" alt="Archive 2"></a>
+    <a href="images/event3.JPG" data-lightbox="archives" data-title="Archive 3"><img src="images/event3.JPG" alt="Archive 3"></a>
   </div>
 </section>
 
