--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div>Funding Mobilized (₹)</div>
     </div>
     <div class="counter-box">
-      <div class="counter-number" data-count="300 & counting">0</div>
+      <div class="counter-number" data-count="300">0</div>
       <div>Projects Supported</div>
     </div>
   </div>
