--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 <section class="contact">
   <h3>Contact / Connect</h3>
-  <form action="https://formspree.io/f/yourformid" method="POST">
+  <form action="https://formspree.io/f/mypageid" method="POST">
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="_replyto" placeholder="Your Email" required>
     <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
