--- a/index.html
+++ b/index.html
@@ -55,6 +55,55 @@
     .counters {flex-direction:column; gap:20px;}
     .gallery-images img {width:90%; height:auto;}
   }
+  /* --- Subtle Premium Enhancements --- */
+
+/* 1. Larger, crisper typography */
+body {
+  font-size: 18px;          /* up from default */
+  line-height: 1.7;
+}
+
+/* 2. Section contrast: alternate light backgrounds */
+section:nth-of-type(even) {
+  background: #f2f4f8;      /* gentle grey */
+}
+
+/* 3. Unified accent color (deep navy) */
+a,
+.counter-number,
+.linkedin-btn {
+  color: #1a237e;
+}
+.linkedin-btn {
+  background: #1a237e;
+}
+.linkedin-btn:hover {
+  background: #151c61;
+}
+
+/* 4. Soft card shadows on hover */
+.achievements,
+.archives,
+.contact {
+  transition: box-shadow 0.3s ease;
+}
+.achievements:hover,
+.archives:hover,
+.contact:hover {
+  box-shadow: 0 6px 16px rgba(0,0,0,0.08);
+  background: #ffffff;
+  border-radius: 8px;
+}
+
+/* 5. Micro hover animation for buttons */
+button,
+.linkedin-btn {
+  transition: transform 0.2s ease;
+}
+button:hover,
+.linkedin-btn:hover {
+  transform: scale(1.03);
+}
 </style>
 </head>
 <body>
