--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@ a,
 }
 .linkedin-btn {
   background: #1a237e;
+.linkedin-btn {
+  color: #ffffff !important;
+}
+
 }
 .linkedin-btn:hover {
   background: #151c61;
