--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ section:nth-of-type(even) {
 a,
 .counter-number,
 .linkedin-btn {
-  color: #1a237e;
+  color: #ffffff !important;
 }
 .linkedin-btn {
   background: #1a237e;
