--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@ section:nth-of-type(even) {
 
 /* 3. Unified accent color (deep navy) */
 a,
-.counter-number,
-.linkedin-btn {
-  color: #ffffff !important;
-}
-.linkedin-btn {
-  background: #1a237e;
+.counter-number {
+  color: #1a237e;      /* deep navy links/counters */
 }
 
+.linkedin-btn {
+  background: #1a237e; /* deep navy background */
+  color: #ffffff;      /* force white text */
 }
+
 .linkedin-btn:hover {
   background: #151c61;
 }
