--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@ button:hover,
 .linkedin-btn:hover {
   transform: scale(1.03);
 }
+  /* --- Final color reset --- */
+a {
+  color: #1a237e;           /* deep navy links */
+}
+
+.counter-number {
+  color: #009688;           /* teal counters */
+}
+
+.linkedin-btn {
+  background: #1a237e;      /* deep navy background */
+  color: #ffffff;           /* white button text */
+}
+
 </style>
 </head>
 <body>
